# c-kernel

./: .clangd  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.sh  format.sh  gdb.sh  headers.sh  iso.sh  notes.md  qemu.sh
cmake/: Toolchain.cmake
hooks/: pre-commit
kernel/: CMakeLists.txt  Makefile
kernel/arch/i386/: boot.S  linker.ld  tty.c
kernel/include/: utils.h
kernel/include/kernel/: allocator.h  circular_buffer.h  future.h  gdt.h  interrupts.h  monotonic_tick.h  multiboot.h  panic.h  pci.h  spinlock.h  tty.h
kernel/include/kernel/io/: rtc.h  uart.h
kernel/kernel/: allocator.c  circular_buffer.c  future.c  gdt.c  interrupts.c  kernel.c  monotonic_tick.c  multiboot.c  panic.c  pci.c  spinlock.c  utils.c
kernel/kernel/io/: rtc.c  uart.c
libc/: CMakeLists.txt  Makefile
libc/include/: stdio.h  string.h  unistd.h
libc/stdio/: printf.c
libc/stdlib/: unistd.c
libc/string/: strncmp.c
